[package]
name = "voting-contract"
description = "voting example rewrite"
authors = [""]
version = "0.1.0"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.1"
borsh-derive = "0.9.1"
solana-program = "=1.7.10"
thiserror = "1.0.24"
byteorder = "1.3"

[dev-dependencies]
solana-program-test = "=1.7.10"
solana-sdk = "=1.7.10"

[lib]
name = "voting_rewrite"
crate-type = ["cdylib", "lib"]